# candlebrot

./: CMakeLists.txt  fractal.h  image.h  main.c  stack.h
render/: render.h  render_brute_force.h  render_perimeter.h
